# py-stu

./: AGENTS.md  README.md  opencode.json
.cursor/rules/: git-commit-cn.mdc
.superpowers/sdd/: final-review.diff  review-110a9c1..904d815.diff  review-6cd9e4f..474cfac.diff  review-904d815..6cd9e4f.diff  task-1-brief.md  task-1-report.md  task-2-brief.md  task-2-report.md
backend/: .dockerignore  .env.development  .env.example  .env.production  .env.staging  .env.test  .gitignore  Dockerfile  Makefile  README.md  dev.ps1  docker-compose.yml  pyproject.toml  run.ps1  seed.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: auth.py  company.py  department.py  login_log.py  menu.py  position.py  role.py  user.py
backend/app/core/: config.py  exceptions.py  logger.py  security.py
backend/app/database/: mongodb.py  redis.py
backend/app/middleware/: auth.py
backend/app/models/: company.py  department.py  login_log.py  menu.py  position.py  role.py  user.py
backend/app/repositories/: company_repository.py  department_repository.py  login_log_repository.py  menu_repository.py  position_repository.py  role_repository.py  user_repository.py
backend/app/schemas/: auth.py  company.py  department.py  login_log.py  menu.py  position.py  role.py  user.py
backend/app/services/: auth_service.py  company_service.py  department_service.py  login_log_service.py  menu_service.py  permission_service.py  position_service.py  role_service.py  user_service.py
backend/app/utils/: pagination.py  response.py
backend/tests/: conftest.py  test_auth.py  test_config.py  test_security.py  test_user.py
docs/superpowers/plans/: 2026-07-01-auth-user-module.md  2026-07-01-env-config-packaging-plan.md  2026-07-01-org-rbac.md  2026-07-04-code-generation.md
docs/superpowers/specs/: 2026-07-01-auth-user-module-design.md  (+3 more)
