[project]
name = "python-stu"
version = "0.1.0"
description = "Enterprise FastAPI + MongoDB backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.0,<3",
    "pydantic-settings>=2.0",
    "motor>=3.6.0",
    "beanie>=1.28.0",
    "redis[hiredis]>=5.2.0",
    "pyjwt>=2.9.0",
    "bcrypt>=4.2.0",
    "loguru>=0.7.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
